# BadgeJunkie

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/badge_junkie/: math_utils.py
tests/: test_math_utils.py
