[project]
name = "badge_junkie"
version = "0.1.0"
description = "The repo that can’t get enough of those shiny badges!"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Matt", email = "matt@example.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests>=2.0.0",
    "numpy>=1.21.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
